src/objects/Applicant__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Are_you_working__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are you working?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comapny_Name__c</fullName>
        <label>Comapny Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Sri Lanka</fullName>
                </value>
                <value>
                    <fullName>Pakistan</fullName>
                </value>
                <value>
                    <fullName>Nepal</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <label>Employee Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Phone_No__c</fullName>
        <label>Employee Phone No</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mail__c</fullName>
        <label>Mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Qualification__c</fullName>
        <label>Qualification</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SSLC</fullName>
                </value>
                <value>
                    <fullName>HSC</fullName>
                </value>
                <value>
                    <fullName>UG</fullName>
                </value>
                <value>
                    <fullName>PG</fullName>
                </value>
                <value>
                    <fullName>Diploma</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>Applicant</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Applicant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applicants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>if_working_then_company_name_is_must</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Are_you_working__c ,  ISBLANK( Comapny_Name__c ) ) ||
AND( NOT(Are_you_working__c) ,  NOT(ISBLANK( Comapny_Name__c )) )</errorConditionFormula>
        <errorMessage>If you are working then, Company name is must</errorMessage>
    </validationRules>
</CustomObject>